# SNU-AI-Challenge_Ver8

./: .gitignore  CLAUDE.md  TODO.md  TODO_VER8.md  capdep_report_2026-07-21.md  conftest.py  data_download.py  overnight_log_2026-07-21.md  pyproject.toml  requirements-gpu.txt  requirements.txt
data/: adapter.py
docs/: reversal_rejected_dpo_plan_2026-07-22.md
runs/dpo32b_v8_reversal/checkpoint-100/: trainer_state.json
runs/test_reversal_ckpt100/: report.json  submission.csv
scripts/: ab_gate.py  audit_input.py  bench_3090.py  build_decompose_cache.py  dashboard_dpo_reversal.sh  decode_expected.py  diag_swap_submission.py  eval_report.py  measure_caption_dependence.py  run_8b_bf16_pipeline.sh  run_champ_tta12_alt.sh  run_champ_tta24.sh  run_champ_tta8b.sh  run_champ_tta_sweep.sh  run_dpo_holdout_chain.sh  run_dpo_test_chain.sh  run_test_cascade_probe.sh  score_agreement.py  smoke_gpu.py  status_8b_chain.sh  wait_tta24_then_test_cascade.sh  watch_infer.py  watch_train.py  watch_tta12_alt.sh
src/snuai/: __init__.py  budget.py  perm.py  prompting.py  submission.py
src/snuai/data/: augment.py  decompose.py  importance.py  sample.py  split.py  synthetic.py
src/snuai/infer/: cascade.py  engine.py  (+5 more)
tests/: conftest.py  test_audit_input.py  test_decode_expected.py  test_decompose.py  test_diag_swap_submission.py  test_dpo_pairs.py  test_eval_report.py  test_perm.py  test_qlora.py  test_soft_label_sft.py  test_submission.py  test_train_dpo.py  test_tta_alternating12.py  test_tta_balanced24.py  test_tta_balanced8.py  test_tta_labels_legend.py  test_video_dup.py
(+6 files in other folders)
